# credential-canvern

./: CMakeLists.txt  README.md
docs/: manual.txt
docs/diagrams/: .~lock.class-structure.odg#  SCHEMA:cc_db.uml  class-structure.odg  data-schema.odg
include/: Favorites.h  RecordItem.h  Records.h  SQLConnector.h  SessionLog.h  User.h
lib/: libconnectionlib.dylib
server/: CMakeLists.txt
server/cc-db/: Favorites.sql  Records.sql  SessionLog.sql  Users.sql
server/cc_db/: UserConfig.sql
server/include/: Favorites.h  RecordItem.h  Records.h  SQLConnector.h  SessionLog.h  SqlConnector.h  User.h  UserAccount.h  UserConfig.h
server/src/: Favorites.cc  Records.cc  SQLConnector.cpp  SessionLog.cc  SqlConnector.cc  SqlConnector.cpp  User.cc  User.cpp  UserAccount.cc  UserConfig.cc
src/: RecordItem.cpp  SQLConnector.cpp  SessionLog.cpp
